<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_shape"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_shape">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_logo_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:background="@drawable/bg_shape_white"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_fieb"
                android:contentDescription="@string/todo" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_shape_white"
                android:padding="10dp"
                app:srcCompat="@drawable/logo_expotec"
                android:contentDescription="@string/todo" />

            <ProgressBar
                android:id="@+id/loading_registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                android:drawingCacheQuality="auto"
                android:requiresFadingEdge="horizontal|vertical"
                android:textAlignment="center"
                android:visibility="gone" />

            <EditText
                android:id="@+id/nome_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_shape_white"
                android:hint="@string/prompt_name"
                android:inputType="textPersonName|text"
                android:selectAllOnFocus="true"
                android:textSize="24sp"
                android:importantForAutofill="no" tools:targetApi="o"/>

            <EditText
                android:id="@+id/username_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_shape_white"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:textSize="24sp"
                android:importantForAutofill="no" tools:targetApi="o"/>

            <EditText
                android:id="@+id/password_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_shape_white"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textSize="24sp"
                android:importantForAutofill="no" tools:targetApi="o"/>

            <EditText
                android:id="@+id/fone_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_shape_white"
                android:hint="@string/prompt_phone"
                android:inputType="phone"
                android:selectAllOnFocus="true"
                android:textSize="24sp"
                android:importantForAutofill="no" tools:targetApi="o"/>

            <Button
                android:id="@+id/login_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="64dp"
                android:background="@drawable/bg_shape_white"
                android:enabled="true"
                android:text="@string/btn_register"
                android:textColor="@color/colorAccent"
                android:textSize="30sp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>